data base with sequelize
Changes to be committed:
	deleted:    .gitignore
	modified:   server/.env
	new file:   server/.gitignore
	new file:   server/app.js
	new file:   server/database.js
	deleted:    server/db.js
	deleted:    server/main.js
	new file:   server/models/associations.js
	new file:   server/models/order.js
	new file:   server/models/order_detail.js
	new file:   server/models/product.js
	new file:   server/models/supplier.js
	new file:   server/models/supplier_product.js
	modified:   server/models/user.js
	modified:   server/package-lock.json
	modified:   server/package.json
	modified:   server/server.js

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
+DB_NAME = 'shop_software'
+DB_USER = 'root'
+DB_PASSWORD = '1234'
 PORT = 8000
-DATABASE = shop_software
-DB_USER_NAME= root
-DB_PASSWORD= 1234
