--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,10 @@
     "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   }
 }
