login and registration
Changes to be committed:
	modified:   server/.env
	modified:   server/app.js
	new file:   server/controllers/authController.js
	modified:   server/models/user.js
	modified:   server/package-lock.json
	modified:   server/package.json
	new file:   server/routers/authRouter.js
	modified:   server/server.js

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 DB_NAME = 'shop_software'
 DB_USER = 'root'
 DB_PASSWORD = '1234'
+SESSION_SECRET = 'ashjjdgrtyeooskldhheyfbbasdbfba667q53644366563$^#$*TYFHkvHFTYDysdfghsfhblhsbfbnbslgfligsbfg'
 PORT = 8000
